--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
         <meta charset="utf-8"/>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Word Game</title>
 	</head>
 
@@ -13,6 +14,7 @@
 			<!--Room password: &emsp;<input type="text" id="createRoomPwd" name="roomPwd" value=""><br>-->
 			<button type="button" id="createButton" onclick="createRoom();">Create/join</button>
 		</form>
+		
 		<!--
 		<br><br>
 		<p>Join an existing room</p>
